--- a/about.html
+++ b/about.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About Us/title>
+        <title>About Us</title>
     </head>
     <body>
         <h1>About</h1>
         <p>This site is a sample project for the <strong>awesome</strong> Git
-           tutorial <em>Learn Enough™ Git to Be Dangerous</em>.
+           tutorial<a href="https://www.learnenough.com/git-tutorial">
+           em>Learn Enough™ Git to Be Dangerous</em>.</a>
         </p>
         <img src="images/breaching_whale.jpg">
     </body>
